# remotedesktop

./: .gitignore  PROGRESS.md  README.md
.github/scripts/: update-readme-downloads.mjs
.github/workflows/: release.yml  validation.yml
android/: .env.example  .gitignore  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
docs/: index.html  privacy.html  support.html
host-mac/: README.md  project.yml
host-mac/AcceptanceFixtures/: LocalBrowserWorkbench.html  LocalDeliveryQuote.html  MCPAcceptanceFixture.swift  MCPAcceptanceFrontmostRestorer.swift  MCPAcceptanceWindowAudit.swift  README.md  SafeMail.html
host-mac/RemoteDesktopHost/: App.swift  AppLogo.swift  AudioInputEntitlements.swift  BonjourAdvertiser.swift  HIDUsage.swift  HeadlessHostSettings.swift  HostCommandLine.swift  HostConfig.swift  HostPeerSession.swift  HostSession.swift  HostSettingsView.swift  HostSetupView.swift  Info.plist  InputInjector.swift  MenuContent.swift  PermissionsProvider.swift  RemoteDesktopHost.entitlements  ScreenCapture.swift  SystemAudioBridge.swift  WebRTCAliases.swift  WireFormat.swift
host-mac/RemoteDesktopHost.xcodeproj/: project.pbxproj
host-mac/RemoteDesktopHost/ComputerUse/: AppleFoundationMCPPlanner.swift  ComputerUseActionSafetyPolicy.swift  ComputerUseArtifactManifest.swift  ComputerUseClarificationPolicy.swift  ComputerUseHTTPDownloader.swift  ComputerUseInstaller.swift  ComputerUseRuntimeTypes.swift  ComputerUseTaskLedger.swift  FoundationMCPJSONSchemaBridge.swift  HostComputerUseManager.swift  LlamaSemanticActionRouter.swift  LocalComputerUseBrokerServer.swift  LocalHostComputerUseChannel.swift  MCPApprovalPresentation.swift  MCPClientPool.swift  MCPClientSession.swift  MCPFirstComputerUseExecutor.swift  MCPServerRegistry.swift  MCPToolSafetyPolicy.swift  MCPTypes.swift  MacControlMCPArchiveExtractor.swift  MacControlMCPArtifact.swift  MacControlMCPInstaller.swift  MultiplexHostComputerUseChannel.swift  OSAtlasComputerUseExecutor.swift  OSAtlasLlamaRuntime.swift  OSAtlasRuntimeInstallation.swift  RemoteDesktopMailAutomationPreflight.swift  RemoteDesktopMailMCP.swift  SemanticCandidateSelectionV5.swift  SemanticNativeToolWireContract.swift
host-mac/RemoteDesktopHost/ThirdPartyNotices/: MAC-CONTROL-MCP-LICENSE.txt  NOTICE.txt
host-mac/RemoteDesktopHostTests/: AppleFoundationMCPPlannerTests.swift  ComputerUseLicenseComplianceTests.swift  ComputerUseMobileInitiationTests.swift  ComputerUseTests.swift  HostSessionTests.swift  LlamaSemanticActionRouterTests.swift  LocalComputerUseTransportTests.swift  MCPApprovalPresentationTests.swift  MCPFirstComputerUseExecutorTests.swift  MCPFoundationTests.swift  MacControlMCPInstallerTests.swift  OSAtlasComputerUseExecutorTests.swift  OSAtlasNativeRealUIAcceptanceTests.swift  OSAtlasRuntimeInstallationTests.swift  RemoteDesktopMailMCPTests.swift  ScreenCaptureSizingTests.swift  SemanticCandidateSelectionV5Tests.swift  SemanticNativeToolWireContractTests.swift
host-mac/ThirdPartyRuntime/llama-b9992/: libggml-base.0.16.0.dylib  libllama-common.0.dylib  libllama.0.dylib  libmtmd.0.dylib  runtime-manifest.json
host-mac/scripts/: generate_pppc_profile.sh  install_host.sh  package_llama_runtime.sh  run_doordash_takeover_resume_simulator_live_e2e.py  run_local_browser_live_acceptance.sh  run_mcp_acceptance.py  run_osatlas_acceptance.sh  verify_host_bundle_trust.sh  verify_llama_runtime.py  verify_xcresult_counts.sh
host-mac/scripts/tests/: test_build_and_run_contract.py  test_release_workflow_security_contract.py  test_run_doordash_takeover_resume_simulator_live_e2e.py  test_run_local_browser_live_acceptance_contract.py  test_run_mcp_acceptance.py  test_run_osatlas_acceptance_contract.py  test_verify_llama_runtime.py
host-windows/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  install-local-build.ps1
host-windows/.cargo/: config.toml
host-windows/packaging/: generate-icon.ps1  installer.iss
host-windows/src/: app_state.rs  auth.rs  autostart.rs  capture.rs  cloudkit.rs  config.rs  credentials.rs  iceconfig.rs  identity.rs  input.rs  main.rs  media.rs  protocol.rs  settings.rs  signaling.rs  ui.rs  webrtc_host.rs
host-windows/tests/: iface_enum_check.rs
ios/: README.md  project.yml
ios/RemoteDesktop/: App.swift  AppLogo.swift  Config.swift  ContentView.swift  Info.plist  RemoteDesktop.entitlements  SessionModel.swift
ios/RemoteDesktop/Accessories/: AccessoryMonitor.swift
ios/RemoteDesktop/ComputerUse/: ComputerUsePendingPromptStore.swift  ComputerUseSessionModel.swift  ComputerUseSetupCoordinator.swift  ComputerUseView.swift  LocalComputerUseBrokerClient.swift
ios/RemoteDesktop/Pairing/: LocalHostDiscovery.swift  (+1 more)
ios/RemoteDesktopLiveE2ETests/: ComputerUseLiveE2ECleanup.swift  ComputerUseLocalLifecycleSimulatorLiveE2ETests.swift  ComputerUseSetupLiveE2ETests.swift  MCPMailSendSimulatorLiveE2ETests.swift  OSAtlasDoorDashGuestSignInSimulatorLiveE2ETests.swift  OSAtlasDoorDashSimulatorLiveE2ETests.swift  OSAtlasDoorDashTakeoverResumeSimulatorLiveE2ETests.swift  OSAtlasLocalBrowserOutcomeSimulatorLiveE2ETests.swift  OSAtlasLocalBrowserSafetySimulatorLiveE2ETests.swift  OSAtlasLocalBrowserSearchSpinnerSimulatorLiveE2ETests.swift  OSAtlasLocalFixtureSimulatorLiveE2ETests.swift
ios/RemoteDesktopTests/: ComputerUseSetupTests.swift  InputAndDiscoveryTests.swift  LocalComputerUseTests.swift  RemoteScreenInteractionTests.swift  SignalingPreflightTransportTests.swift  WebRTCTransportTests.swift
protocol/: PROTOCOL.md
protocol/Swift/: CloudKitComputerUseChannel.swift  CloudKitLocalComputerUsePairing.swift  CloudKitSignalingClient.swift  ComputerUseProtocol.swift  DesktopVideoQuality.swift  DeviceIdentity.swift  ICEConfigFetcher.swift  LocalComputerUseCredentials.swift  LocalComputerUseRPC.swift  LocalComputerUseTLS.swift  SignalingEnvelope.swift
script/: build_and_run.sh  verify_apple_configuration_pair.sh
scripts/: generate_apple_icons.swift
signaling/: DEPRECATED.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
signaling/src/: index.ts
(+40 files in other folders)
