[package]
name = "remote-desktop-host"
version = "0.2.1"
edition = "2021"
publish = false
description = "Windows host agent for Remote Desktop (CloudKit-signaled WebRTC)."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3"
rand = "0.9"
url = "2"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
hostname = "0.4"
mdns-sd = "0.13"
dotenvy = "0.15"

# Self-signed TLS for the localhost Apple ID sign-in callback. CloudKit
# requires an https Sign-In Callback URL in the production environment, so
# the host terminates TLS on 127.0.0.1 with a certificate generated at
# runtime. The browser warns about the untrusted cert; the user proceeds.
tokio-rustls = "0.26"
rcgen = "0.13"


# WebRTC + media. All cross-platform: the peer connection, codecs,
# input injection and the H.264/Opus encoders compile and unit-test on
# any host. Only raw frame/audio capture is OS-specific (see below).
webrtc = "0.17"
bytes = "1"
async-trait = "0.1"
openh264 = "0.9"
audiopus = "0.2"
enigo = "0.6"

# GUI: small egui/eframe window that mirrors the macOS popover. Pulls
# in winit + glow so the binary shows up in the Windows taskbar with
# our icon and can render the same five-state status surface as the
# Mac host.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
tray-icon = "0.24.0"

# Windows-only capture. Everything else is portable so `cargo check`
# and `cargo test` exercise the whole pipeline on the dev machine; the
# screen/audio grabbers are the single OS-gated seam.
[target.'cfg(windows)'.dependencies]
windows-capture = "2"
wasapi = "0.23"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }

# Embeds the app icon and version metadata into the release .exe.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
